Fixed layout z-index

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -123,7 +123,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1;
+  z-index: 901;
   background-color: white;
 }
 #default-layout #desktop > #sider-desktop {
@@ -132,7 +132,7 @@ body {
   bottom: 0;
   left: 0;
   width: 256px;
-  z-index: 1;
+  z-index: 900;
   border-right: solid 1px #00CDFF;
 }
 #default-layout #desktop > #content-desktop {
